.helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: werf-first-app.test
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: werf-first-app
            port:
              number: 3000
